Speedup tests